# dayzdockerserver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  biome.json  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
files/: serverDZ.cfg.example
files/mods/: @BoomLaysThings  @BowenCamoGear  @DEADAIRWeaponpackSTALKERAirDevTeam  @DayZ-Dynamic-AI-Addon  @FallFix  @FlipTransport  @ForeverBurningCampfire  @MassClothing  @MortysWeapons  @MuchCarKey  @RemasteredArmaWeaponPack  @ZAlien  @sfradio
files/mods/1602372402/: map.env
files/mods/1793351435/: xml.env
files/mods/1797720064/: xml.env
files/mods/1832448183/: xml.env
files/mods/1890912719/: xml.env
files/mods/2049002856/: xml.env
files/mods/2155726353/: xml.env
files/mods/2443122116/: xml.env
files/mods/2517480838/: xml.env
files/mods/2663169692/: install.sh  xml.env
files/mods/2692979668/: install.sh  xml.env
files/mods/2693659085/: xml.env
files/mods/2860643107/: xml.env
files/mods/2881635033/: xml.env
files/mods/2905759309/: xml.env
files/mods/3017273820/: xml.env
files/mods/3136720512/: map.env
src/dayz/: README.md  __init__.py
src/dayz/cli/: healthcheck.py  init_volumes.py
src/dayz/config/: __init__.py  models.py  paths.py
src/dayz/core/: maps.py  mods.py  params.py  server.py  steam.py
src/dayz/mods/: __init__.py  router.py  vpp.py  vpp_api.py
src/dayz/services/: api.py  (+1 more)
web/: README.md  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  types.ts
(+39 files in other folders)
